change hotroom title

--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -41,7 +41,7 @@
 
 
 <div class="content-column">
-  <div class="title">活発なルーム</div>
+  <div class="title">現在アクティブなルーム</div>
 </div>
 <div class="rooms">
   <% @room_update.each do |room| %>
