--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -163,7 +163,7 @@ document.addEventListener("turbo:load", () => {
   });
     
   function getRoomsChild(){
-    const bottom_room = document.getElementById("roombottom")
+    const bottom_room = document.getElementById("roombottom") //roomsの一番下の空div
     const rect = bottom_room.getBoundingClientRect();
     const isInView = 0 < rect.bottom && parseInt(rect.bottom) == window.innerHeight;
     return isInView;
@@ -171,7 +171,7 @@ document.addEventListener("turbo:load", () => {
 
   function roomScroll() {
     //変数定義
-    let rooms = document.getElementById("rooms-inf");
+    let rooms = document.getElementById("rooms-inf"); //page.htmlを参考にしたもの
     let last_room = rooms.lastElementChild;
     let last_room_h = last_room.getBoundingClientRect();
     let height;
