--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -3,7 +3,15 @@
 <div class="room-header-list">
   <div class="room-header">
     <div class="room_header_left">
-      <%= link_to request.referer do %><div class="room_back"><i class="fa-solid fa-angle-left"></i></div><% end %>
+      <% if request.referer == request.url %>
+        <%= link_to joined_room_path do %>
+          <div class="room_back"><i class="fa-solid fa-angle-left"></i></div>
+        <% end %>
+      <% else %>
+        <%= link_to request.referer do %>
+          <div class="room_back"><i class="fa-solid fa-angle-left"></i></div>
+        <% end %>
+      <% end %>
         <div class="room_title" id="js-show-modal-detail"><%= @room_data.name %>
           <div class="room_datail_button"><i  class="fa-solid fa-caret-down"></i></div>
         </div>
