--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -60,7 +60,7 @@
             <div class="acd-content">
               <div class="edit_room_function">
                 <% if @room_data.admin == @current_user.id %>
-                  <%= form_with url: update_room_path, model: @room, data: { turbo_frame: "_top" }  do |f| %>
+                  <%= form_with url: update_room_path, model: room, data: { turbo_frame: "_top" }  do |f| %>
                     <div id="errors-update-room"></div>
                     <%= f.label :category %>
                     <%= f.text_field :category %>
