--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -172,8 +172,7 @@ document.addEventListener("turbo:load", () => {
   function roomScroll() {
     //変数定義
     let rooms = document.getElementById("rooms-inf"); //page.htmlを参考にしたもの
-    let last_room = rooms.lastElementChild;
-    let last_room_h = last_room.getBoundingClientRect();
+    let prev = rooms.scrollHeight;
     let height;
     let jqxhr;
     let flag = getRoomsChild();
@@ -187,7 +186,7 @@ document.addEventListener("turbo:load", () => {
           setTimeout(function(){
             $("#rooms-inf").append($(data).find("#rooms-inf").html());
             flag = getRoomsChild();
-            height = rooms.scrollHeight - last_room_h.bottom
+            height = rooms.scrollHeight - prev
             window.scroll(0, height);
             $(".cv-spinner").addClass("hide");
           }, 850)
