--- a/chatapp/app/views/room/_new_room.html.erb
+++ b/chatapp/app/views/room/_new_room.html.erb
@@ -11,18 +11,7 @@
           <div id="errors-create-room"></div>
           <div class="create-category-name">
             <%= f.label :category %>
-            <%= f.text_field :category %>
-          </div>
-          人気カテゴリー
-          <div class="category">
-            <% @categories.each_with_index do |category, i| %>
-              <div id="category-name-<%= i %>"><%= category[0] %></div>
-              <div class="category-count">(<%= category[1] %>)</div>
-            <% end %>
-          </div>
-          <div class="create-room-limit">
-            <%= f.label "メンバーを制限する" %>
-            <%= f.check_box :private, checked: false %>
+            <%= f.text_field :category, id: "room_category" %>
           </div>
           <div class="create-room-name">
             <%= f.label :name %>
@@ -45,18 +34,6 @@
 </div>
 
 <script type="text/javascript">
-  document.addEventListener("turbo:load", () => {
-    function ChangeValue(e) {
-      room_category.value = "未分類";
-      room_category.value = e.target.textContent;
-    }
-  <% @categories.each_with_index do |category, i| %>
-    document.getElementById("category-name-" + <%= i %>).addEventListener('click', ChangeValue, false)
-  <% end %>
-  });
-</script>
-
-<script type="text/javascript">
 document.addEventListener("turbo:load", () => {
   $(function() {
       const dataList = function(request, response) {
@@ -66,6 +43,7 @@ document.addEventListener("turbo:load", () => {
           type: 'GET',
           cache: true,
           success: function(data) {
+            console.log(data);
             response(data);
           },
           error: function(XMLHttpRequest, textStatus, errorThrown) {
