--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -85,12 +85,12 @@
             <div class="modal-room-back">
               <div class="room-back-contents"> 
                 <%= link_to "ルームから退室する", room_leave_path(room.id), 
-                    data: {turbo_method: :delete} %>
+                    data: {turbo_method: :delete, turbo_confirm: "退室しますか？"} %>
               </div>
             </div>
           </div>
         </div>
-      </div><!-- tab container end -->
+      </div>
     </div>
   </div>
   <div class="background-shadow" id="js-black-sh"></div>
