--- a/chatapp/app/views/room/_new_room.html.erb
+++ b/chatapp/app/views/room/_new_room.html.erb
@@ -15,7 +15,7 @@
           </div>
           <div class="create-room-name">
             <%= f.label :name %>
-            <%= f.text_field :name %>
+            <%= f.text_field :name, autocomplete: "off" %>
           </div>
           <div class="create-room-image">
             <%= f.label :image %><br>
