--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -65,7 +65,7 @@
                     <%= f.label :category %>
                     <%= f.text_field :category %>
                     <%= f.label :name %>
-                    <%= f.text_field :name %>
+                    <%= f.text_field :name, autocomplete: "off" %>
                     <%= f.label :image %><br>
                     <%= f.file_field :image %><br>
                     <%= f.label :describe %>
