--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -666,6 +666,8 @@
             overflow: hidden;
             border: none;
             border-radius: 3px;
+            font: inherit;
+            font-size: 14px;
           }
           input[type="file"] {
             margin-bottom: 6px;
@@ -725,6 +727,15 @@
   &:hover{
     background-color: #ffe8e8;
     transition: 0.6s;
+  }
+  .box {
+    width: 100%;
+  }
+
+  .box a {
+    display: block;
+    width: 100%;
+    height: 100%;
   }
 }
 
