--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
           <% begin %>
             <% Net::HTTP.new(url.host).get({"User-Agent": agent}) %>
           <% rescue %>
-            <img class="user-icon" src="/background.png">
+            <img class="user-icon" src="/default<%=rand(1..4)%>.png">
           <% else %>
             <img class="user-icon" src=<%= @current_user.image %>>
           <% end %>
