--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -70,7 +70,9 @@
                     <%= f.file_field :image %><br>
                     <%= f.label :describe %>
                     <%= f.text_area:describe %>
-                    <%= f.submit "変更する" %>
+                    <div class="submit-area">
+                      <%= f.submit "変更する" %>
+                    </div>
                   <% end %>
                   <div class="modal-room-back">
                     <div class="box">
