--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -650,6 +650,7 @@
             background-color:#F4F4F4;
             border: none;
             border-radius: 3px;
+            padding: 2px 5px;
           }
           textarea{
             padding: 2px 2px 2px 2px;
@@ -674,6 +675,23 @@
           }
           .category {
             display: flex;
+          }
+          .submit-area {
+            text-align: center;
+            margin-top: 30px;
+            input[type="submit"] {
+              background-color: #2dbb8c;
+              border: none;
+              color: #fff;
+              text-align: center;
+              padding: 10px 20%;
+              cursor: pointer;
+              cursor: hand;
+              &:hover {
+                opacity: 0.7;
+                transition: 0.4s;
+              }
+            }
           }
         }
       }
