--- a/chatapp/app/views/room/_new_room.html.erb
+++ b/chatapp/app/views/room/_new_room.html.erb
@@ -2,7 +2,7 @@
   <div class="modal-content">
     <div class="modal-header">
       <span class='close'><i class="fas fa-times"></i></span>
-      <h2>新規作成</h2>
+      <div class="title">新規作成</div>
     </div>
     <div class="modal-body">
       <div class="create-from">
@@ -10,22 +10,24 @@
                       model: @new_room, data: { turbo_frame: "_top" } do |f| %>
           <div id="errors-create-room"></div>
           <div class="create-category-name">
-            <%= f.label :category %>
+            <%= f.label :category, class: "form-label" %>
             <%= f.text_field :category, id: "room_category" %>
           </div>
           <div class="create-room-name">
-            <%= f.label :name %>
+            <%= f.label :name, class: "form-label" %>
             <%= f.text_field :name, autocomplete: "off" %>
           </div>
           <div class="create-room-image">
-            <%= f.label :image %><br>
+            <%= f.label :image, class: "form-label" %><br>
             <%= f.file_field :image %><br>
           </div>
           <div class="create-room-info">
-            <%= f.label :describe %>
+            <%= f.label :describe, class: "form-label" %>
             <%= f.text_area :describe %>
           </div>
-          <%= f.submit "登録する" %>
+          <div class="submit-area">
+            <%= f.submit "登録する" %>
+          </div>
         <% end %>
       </div>
     </div>
