--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -737,9 +737,9 @@
   padding: 10px 5px;
   text-align: center;
   .room-back-contents{
-    font-size: 14;
+    font-size: 16px;
     a {
-      color: rgb(229, 25, 25);;
+      color: rgb(229, 25, 25);
     }
   }
   &:hover{
