--- a/chatapp/app/assets/stylesheets/settings.scss
+++ b/chatapp/app/assets/stylesheets/settings.scss
@@ -1,10 +1,34 @@
 .index-image {
   vertical-align: middle; 
-
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
 }
 .index-text {
   display: inline-block; 
   vertical-align: middle; 
+}
+
+.logout-area a{
+  color: rgb(229, 25, 25);
+}
+
+
+.logout-form {
+  margin: 10px 0px 0px 10px;
+  a {
+    background-color: #ffffff;
+    border: 1px solid rgb(229, 66, 66);
+    padding: 8px 20px;
+    font-size: 15px;
+    color: rgb(229, 66, 66);
+    margin-right: 10px;
+    cursor: pointer;
+    cursor: hand;
+    &:hover {
+      border: 1px solid rgb(229, 66, 66);
+      color: #fff;
+      background-color: rgb(229, 66, 66);
+      transition: 0.5s;
+    }
+  }
 }
