--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -55,11 +55,11 @@
         </div>
         <div class="tab_content" id="tab3_content">
           <div class="tab_content_description">
+            <% if room.admin == @current_user.id %>
             <input id="acd-check1" class="acd-check" type="checkbox">
             <label class="acd-label" for="acd-check1">ルーム情報設定</label>
             <div class="acd-content">
               <div class="edit_room_function">
-                <% if room.admin == @current_user.id %>
                   <%= form_with url: update_room_path, model: room, data: { turbo_frame: "_top" }  do |f| %>
                     <div id="errors-update-room"></div>
                     <%= f.label :category %>
@@ -74,21 +74,12 @@
                       <%= f.submit "変更する" %>
                     </div>
                   <% end %>
-                  <div class="modal-room-back">
-                    <div class="box">
-                    <div class="room-back-contents"> 
-                      <%= link_to "ルームを削除する", destroy_room_path(room.id), 
-                        data: {turbo_method: :delete, turbo_confirm: "削除しますか？"} %>
-                    </div>
-                    </div>
-                  </div>
-                <% end %>
               </div>
             </div>
-            
-            <input id="acd-check2" class="acd-check2" type="checkbox">
-            <label class="acd-label2" for="acd-check2">退室</label>
-            <div class="acd-content2">
+            <% end %>
+            <input id="acd-check2" class="acd-check" type="checkbox">
+            <label class="acd-label" for="acd-check2">退室</label>
+            <div class="acd-content">
               <div class="modal-room-back">
                 <div class="box"> 
                 <div class="room-back-contents"> 
@@ -97,6 +88,16 @@
                 </div>
                 </div>
               </div>
+              <% if room.admin == @current_user.id %>
+                <div class="modal-room-back">
+                  <div class="box">
+                    <div class="room-back-contents"> 
+                      <%= link_to "ルームを削除する", destroy_room_path(room.id), 
+                          data: {turbo_method: :delete, turbo_confirm: "削除しますか？"} %>
+                    </div>
+                  </div>
+                </div>
+              <% end %>
             </div>
           </div>
         </div>
