--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -30,7 +30,24 @@
         <div class="tab_content" id="tab2_content">
           <div class="tab_content_description">
               <div class="contents">
+                <div id="user-data" user-data-id="<%= @room_admin[0] %>"></div>
+                <div class="room-user-list admin">
+                  <img src="<%= @room_admin[2] %>" class="icon">
+                  <div class="info">
+                    <div class="info-top">
+                      <div class="name">
+                        <%= @room_admin[1] %>
+                        <% status = @room_admin[3] ? "online":nil %>
+                      </div>
+                      <span class="user-status <%= status %> user-<%= @room_admin[0] %>-status">
+                        ●
+                      </span>
+                    </div>
+                    <div class="role">管理者</div>
+                  </div>
+                </div>
                 <% @info_members.each do |member| %>
+                  <% unless member.id == @room_admin[0] %>
                     <div id="user-data" user-data-id="<%= member.id %>"></div>
                     <div class="room-user-list">
                       <img src="<%= member.image %>" class="icon">
@@ -44,11 +61,9 @@
                             ●
                           </span>
                         </div>
-                        <% if @room_data.admin == member.id %>
-                          <div class="role">管理者</div>
-                        <% end %>
                       </div>
                     </div>
+                  <% end %>
                 <% end %>
               </div>
             </div>
