--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -30,21 +30,22 @@
         <div class="tab_content" id="tab2_content">
           <div class="tab_content_description">
               <div class="contents">
-                  <div class="room-user-list admin">
-                    <img src="<%= @admin.image %>" class="icon">
-                    <div class="info">
-                      <div class="info-top">
-                        <div class="name">
-                          <%= @admin.name %>
-                          <% status = @admin.status ? "online":nil %>
-                        </div>
-                        <span class="user-status <%= status %> user-<%= @admin.id %>-status">
-                          ●
-                        </span>
+                <div id="user-data" user-data-id="<%= @admin.id %>"></div>
+                <div class="room-user-list admin">
+                  <img src="<%= @admin.image %>" class="icon">
+                  <div class="info">
+                    <div class="info-top">
+                      <div class="name">
+                        <%= @admin.name %>
+                        <% status = @admin.status ? "online":nil %>
                       </div>
-                        <div class="role">管理者</div>
+                      <span class="user-status <%= status %> user-<%= @admin.id %>-status">
+                        ●
+                      </span>
                     </div>
+                    <div class="role">管理者</div>
                   </div>
+                </div>
                 <% @info_members.each do |member| %>
                   <% unless member.id == @admin.id%>
                     <div id="user-data" user-data-id="<%= member.id %>"></div>
