--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -36,7 +36,7 @@
       <div id="dummy-textarea" class="dummy-textarea" aria-hidden="true"></div>
         <%= f.text_area :sentence, id: "message-sentence", class: "message-sentense-class", :placeholder => "メッセージを送信する", onkeydown: "messageFunc()" %>
     </div>
-    <%= f.submit "", id: "message-submit", class: "message-submit" %>
+    <%= f.submit "", id: "message-submit", class: "message-submit", data: { disable_with: "" } %>
     <p id="helper-text" style="color: red;"></p>
   </div>
 <% end %>
@@ -126,6 +126,7 @@
       let value_flag = text.replace(/\s/g, "").length;
       if (value_flag > 0 && !event.shiftKey && event.key == "Enter"){
         if (event.key === "Enter" && !event.isComposing) {
+          //document.getElementById('message-form').submit();
           document.getElementById("message-submit").click();
         }
         event.preventDefault();
@@ -170,9 +171,8 @@
 
   <script>
     document.addEventListener("turbo:submit-start", () => {
-      console.log("サブミットスタート")
+      console.log("submit-start")
       enableSubmit();
-
     })
 
     function enableSubmit(){
@@ -182,10 +182,12 @@
 
   <script>
     document.addEventListener("turbo:submit-end", () => {
+      console.log("submit-end")
       disableSubmit();
     })
 
     function disableSubmit(){
+      document.getElementById('message-form').reset();
       $("#message-submit").disabled = true;
       $('.message-submit').css('opacity', '0.2');
     }
