--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -905,7 +905,7 @@
 .acd-label:after{
   background: #ffffff;
   box-sizing: border-box;
-  content: '\f619';
+  content: '\f0d8';
   display: block;
   font: var(--fa-font-solid);
   height: 44px;
@@ -917,7 +917,7 @@
 .acd-label2:after{
   background: #ffffff;
   box-sizing: border-box;
-  content: '\f619';
+  content: '\f0d8';
   display: block;
   font: var(--fa-font-solid);
   height: 44px;
@@ -941,10 +941,10 @@
   visibility: hidden;
 }
 .acd-check:checked + .acd-label:after{
-  content: '\f2fe';
+  content: '\f0d7';
 }
 .acd-check2:checked + .acd-label2:after{
-  content: '\f2fe';
+  content: '\f0d7';
 }
 .acd-check:checked + .acd-label + .acd-content{
   height: auto;
