--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -439,8 +439,10 @@
       padding: 15px 10px 15px 10px;
       margin-bottom: 10px;
       word-break: break-all;
-      img{
-        max-width: 90%;
+      .text-messeges{
+        img{
+          max-width: 56%;
+        }
       }
       .message-left {
         img{
