--- a/chatapp/app/views/room/_messages.html.erb
+++ b/chatapp/app/views/room/_messages.html.erb
@@ -37,7 +37,9 @@
           </div>
         <% end %>
             </div>
+            <div class=text-messeges>
               <p><%= markdown(message.sentence) %></p>
+            </div>
           </div>
       </div>
     <% end %>
