--- a/chatapp/app/views/room/_messages.html.erb
+++ b/chatapp/app/views/room/_messages.html.erb
@@ -37,7 +37,7 @@
           </div>
         <% end %>
             </div>
-              <p><%= markdown(message.sentence) %></p>
+              <%= markdown(message.sentence) %>
           </div>
       </div>
     <% end %>
