--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -439,7 +439,7 @@
       padding: 15px 10px 15px 10px;
       margin-bottom: 10px;
       word-break: break-all;
-      .text-messeges{
+      .text-messages{
         img{
           max-width: 56%;
         }
