--- a/chatapp/app/assets/stylesheets/rouge.scss.erb
+++ b/chatapp/app/assets/stylesheets/rouge.scss.erb
@@ -11,3 +11,12 @@
     width: 100%;
   }
 }
+.text-messages{
+  a{
+    color: blue;
+    text-decoration: none;
+  }
+  a:hover{
+    text-decoration: underline;
+  }
+}
