--- a/chatapp/app/views/room/_messages.html.erb
+++ b/chatapp/app/views/room/_messages.html.erb
@@ -37,7 +37,9 @@
           </div>
         <% end %>
             </div>
-              <%= markdown(message.sentence) %>
+              <div class="text-messages">
+                <%= markdown(message.sentence) %>
+              </div>
           </div>
       </div>
     <% end %>
