--- a/chatapp/app/assets/stylesheets/rouge.scss.erb
+++ b/chatapp/app/assets/stylesheets/rouge.scss.erb
@@ -11,10 +11,14 @@
     width: 100%;
   }
 }
+
 .text-messages{
   a{
     color: blue;
     text-decoration: none;
+  }
+    a:visited{
+    color: purple;
   }
   a:hover{
     text-decoration: underline;
