--- a/chatapp/app/assets/stylesheets/rouge.scss.erb
+++ b/chatapp/app/assets/stylesheets/rouge.scss.erb
@@ -14,11 +14,8 @@
 
 .text-messages{
   a{
-    color: blue;
+    color: #0080ff;
     text-decoration: none;
-  }
-  a:visited{
-    color: purple;
   }
   a:hover{
     text-decoration: underline;
