fix visited color

--- a/chatapp/app/assets/stylesheets/rouge.scss.erb
+++ b/chatapp/app/assets/stylesheets/rouge.scss.erb
@@ -13,9 +13,12 @@
 }
 
 .text-messages{
-  a{
+  a:link{
     color: #0080ff;
     text-decoration: none;
+  }
+  a:visited{
+    color: #6600ff;
   }
   a:hover{
     text-decoration: underline;
