参加したときに出る奴のデザイン変更

--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -487,6 +487,9 @@
       display: none;
       visibility: hidden;
     }
+    .join-notice{
+
+    }
   }
 }
 
@@ -521,7 +524,17 @@
 
 
 .join-notice{
-  //write here
+  background: rgb(255, 255, 255);
+  display: block;
+  margin-bottom: 1px;
+  padding: 10px 0px 10px 5px;
+  position: relative;
+  border: 2px solid rgb(228, 228, 228);
+  border-radius: 10px;
+  cursor: pointer;
+  cursor: hand;
+  color: #515151;
+  text-align: center;
 }
 
 .message-form {
