--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -27,7 +27,7 @@
               </div>
                 <div class="title"><%= room.name %></div>
             </div>
-            <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
+            <% unless @joined_rooms_hash[room.id] %>
               <div class="join-btn-area">
                 <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
               </div>
@@ -69,7 +69,7 @@
               </div>
               <div class="title"><%= room.name %></div>
             </div>
-          <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
+          <% unless @joined_rooms_hash[room.id] %>
               <div class="join-btn-area">
                 <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
               </div>
@@ -110,7 +110,7 @@
               </div>
               <div class="title"><%= room.name %></div>
             </div>
-            <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
+            <% unless @joined_rooms_hash[room.id] %>
               <div class="join-btn-area">
                 <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
               </div>
