--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -522,7 +522,7 @@
 .join-notice{
   background: rgb(255, 255, 255);
   display: block;
-  margin-bottom: 1px;
+  margin: 3px 0px;
   padding: 10px 5px 10px 5px;
   position: relative;
   border: 2px solid rgb(228, 228, 228);
