--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -129,7 +129,7 @@
     <span class="spinner"></span>
   </div>
 </div>
-<div class="rooms-bottom" id="room-bottom" data-turbo-cache="false"></div>
+<div class="rooms-bottom" id="room-bottom"></div>
 
 
 <script type="text/javascript">
