Revert "add join-notice-margin"

--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -524,7 +524,7 @@
 .join-notice{
   background: rgb(255, 255, 255);
   display: block;
-  margin: 3px 0px;
+  margin-bottom: 1px;
   padding: 10px 5px 10px 5px;
   position: relative;
   border: 2px solid rgb(228, 228, 228);
