--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -438,8 +438,10 @@
       font-size: 15px;
       padding: 13px 10px 13px 10px;
       word-break: break-all;
-      img{
-        max-width: 90%;
+      .text-messages{
+        img{
+          max-width: 56%;
+        }
       }
       .message-left {
         img{
